objects/BadgeTemplate_Styles__c.object
<CustomObject>
    <fields>
        <fullName>BadgeName__c</fullName>
        <label>BadgeName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Type__c</fullName>
        <label>Badge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SwedenBadge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EightthElement__c</fullName>
        <label>EightthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>BadgeTemplate_Styles</relationshipLabel>
        <relationshipName>BadgeTemplate_Styles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FifthElement__c</fullName>
        <label>FifthElement</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstRowElement__c</fullName>
        <description>This is for fisrt row style</description>
        <label>FirstRowElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FourthElement__c</fullName>
        <label>FourthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondElement__c</fullName>
        <label>SecondElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SeventhElement__c</fullName>
        <label>SeventhElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SixthElement__c</fullName>
        <label>SixthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ThirdElement__c</fullName>
        <label>ThirdElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ninthelement__c</fullName>
        <label>ninthelement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>BadgeTemplate_Styles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>QR_EVT_0415_0261055</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BadgeTemplate_Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>